Change password screens complete

--- a/src/style/sass/pages/_resetPassword.scss
+++ b/src/style/sass/pages/_resetPassword.scss
@@ -18,15 +18,21 @@
     padding: 20px;
     border-bottom: 1px solid #999999;
   }
+  &__textSuccess{
+    text-align: center;
+    color: black;
+    padding: 20px;
+    // border-top: 1px solid #999999;
+  }
   &__input{
     border:1px solid #FFCD05;
-    width: 90%;
+    // width: 90%;
     &:focus{
       border:1px solid #FFCD05;
     }
   }
   &__button{
-    width: 90%;
+    // width: 90%;
     background-color: #FFCD05;
     color: black;
   }
@@ -36,7 +42,19 @@
     flex-wrap: wrap;
     padding-top: 20px;
   }
-  .label{
-    justify-content: flex-start;
+  &__formBox{
+    display: flex;
+    justify-content: center;
+  }
+  &__form{
+    width: 90%;
+  }
+  &__img{
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+  }
+  &__logo{
+    margin-left: 10px;
   }
 }
