--- a/src/style/sass/pages/_insertphone.scss
+++ b/src/style/sass/pages/_insertphone.scss
@@ -159,3 +159,27 @@
   }
 
 }
+
+
+@media (max-width: 1100px) {
+  .InsertPhone__inputHead__text {
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 22px;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 67%;
+  }
+
+  .InsertPhone__inputHead__label {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 30%;
+  }
+
+  .InsertPhone__textHead__font {
+    font-size: 30px;
+  }
+}
