--- a/src/style/sass/pages/_requestResetPassword.scss
+++ b/src/style/sass/pages/_requestResetPassword.scss
@@ -1,33 +1,41 @@
 .RequestReset{
-    padding: 10%;
-    padding-left: 20%;
-    padding-right: 20%;
-    border-top: 2px solid #FFCD05;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    &__box{
-      border:2px solid #999999;
-      border-radius: 7px;
-      justify-content: space-between;
-    }
-    &__text{
-      text-align: center;
-      color: black;
-      padding: 20px;
-    }
-    a:hover {
-      color: #FFCD05;
-    }
-    &__input{
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  border-top: 2px solid #FFCD05;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  &__box{
+    border:2px solid #999999;
+    border-radius: 7px;
+    justify-content: space-between;
+  }
+  &__text{
+    text-align: center;
+    color: black;
+    padding: 20px;
+  }
+  a:hover {
+    color: #FFCD05;
+  }
+  &__input{
+    border:1px solid #FFCD05;
+    // width: 90%;
+    &:focus{
       border:1px solid #FFCD05;
-      width: 90%;
-      &:focus{
-        border:1px solid #FFCD05;
-      }
-    }
-    .form-group{
-      display: flex;
-      justify-content: center;
     }
   }
+  &__form{
+    width: 90%;
+  }
+  &__formBox{
+    display: flex;
+    justify-content: center;
+  }
+  .form-group{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
