revision design profile dompet and game

--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -197,7 +197,7 @@
 
 @media (min-width: 100px ) and (max-width:396px ) {
   .BannerText__content{
-    margin-top: 20px;
+    margin-top: 3%;
     padding-left: 10%;
     padding-right: 10%;
     &__title{
