--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -1,12 +1,26 @@
 .game{
 	background-color: white;
 	font-size: 20px;
+	background-image: url(https://s3-ap-southeast-1.amazonaws.com/iconpulsa/opacityLogo.svg);
+	background-size: 54% 75%;
+	background-repeat: no-repeat;
+	background-position: center;
+
+	&__textHeader{
+		font-size: 34px;
+	}
+
+	&__textKeytoCoin{
+		font-size: 23px;
+	}
+
 	&__container{
 		margin: auto;
 		width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+		padding-top: 4%;
 	}
 	&__convert{
 		text-align: center;
@@ -51,6 +65,11 @@
 		margin-top: 5%;
 		text-align: center;
 		font-family: Helvetica;
+			&__textDistance{
+				display: flex;
+				flex-direction: column;
+			}
+
 			&__row{
 				display: flex;
 				flex-wrap: wrap;
@@ -64,7 +83,7 @@
 				margin: 3%;
 			}
 			&__title{
-				font-size: 25px;	
+				font-size: 30px;
 			}
 
 			&__img{
@@ -81,8 +100,9 @@
 			font-size: 15px;
 			background-color: white;
 			border: 2px solid #FFCD05;
-			border-radius: 5px;		
+			border-radius: 5px;
 			margin-bottom: 5%;
+			color: black;
 		}
 	}
 }
@@ -105,7 +125,7 @@
 
 .box1 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -118,7 +138,7 @@
 
 .box2 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -130,7 +150,7 @@
 
 .box3 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -142,7 +162,7 @@
 
 .box4 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -154,7 +174,7 @@
 
 .box5 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -166,7 +186,7 @@
 
 .box6 {
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -179,7 +199,7 @@
 .boxaladin {
 	background-image: url('../../asset/Logo/LogoSmall.svg');
 	width: 80%;
-	height: 100px;	
+	height: 100px;
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -207,7 +227,7 @@
 		flex-direction: column;
 		justify-content: center;
 		background-color: black;
-		
+
 		&__item{
 			display: flex;
 			justify-content: center;
@@ -218,7 +238,7 @@
 			font-family: Helvetica;
 			// color: var(--color-yellow-1);
 			font-size: 20px;
-			font-weight: 500;	
+			font-weight: 500;
 			line-height: 16px;
 		}
 	}
