--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -23,6 +23,7 @@
 @import "pages/invoice";
 @import "pages/layanan";
 @import "pages/dompet";
+@import "pages/faq";
 
 // reuseable components
 @import "reusable/base";
