--- a/src/style/sass/pages/_layanan.scss
+++ b/src/style/sass/pages/_layanan.scss
@@ -1,6 +1,5 @@
 .layanan {
-  background-color: #3E3E3E;
-  color: #FFCD05;
+  background-color: white;
   &__container{
     min-height: 30rem;
     padding: 2.5%;
@@ -18,6 +17,7 @@
   &__input{
     color: black;
     font-size: 13px;
+    border-color: #FFCD05;
     &:focus{
       color: black ;
     }
@@ -25,6 +25,7 @@
       color: black;
       height: 200px;
       font-size: 13px;
+      border-color: #FFCD05;
       resize: all; 
       &:focus{
         color: black ;
