--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -46,14 +46,13 @@
 	}
 
 	&__slotItems{
-		width: 70%;
 		border-radius: 10px;
-		border: 1px solid rgb(186, 171, 171);
+		border: 11px solid rgb(186, 171, 171);
 		margin-bottom: 10px;
 		background-color: rgb(186, 171, 171);
 			&__boxContainer {
 				background-color: black;
-				width: 100%;
+				width: 266px;
 				border-radius: 10px;
 				&__box{
 					display: flex;
@@ -107,19 +106,19 @@
 	}
 }
 
-@media (min-width: 275px )  {
-  .game__slotItems{
-		padding: 15px;
-		width: 310px;
-  }
-}
+// @media (min-width: 349px )  {
+//   .game__slotItems{
+// 		padding: 15px;
+// 		width: 310px;
+//   }
+// }
 
-@media (min-width: 350px ) and (max-width:500px ) {
-  .game__slotItems{
-		padding: 15px;
-		width: 90%;
-  }
-}
+// @media (min-width: 350px ) and (max-width:500px ) {
+//   .game__slotItems{
+// 		padding: 15px;
+// 		width: 90%;
+//   }
+// }
 
 
 
