--- a/src/style/sass/pages/_layanan.scss
+++ b/src/style/sass/pages/_layanan.scss
@@ -4,8 +4,8 @@
     min-height: 30rem;
     padding: 2.5%;
     padding-bottom: 40px;
-    padding-left: 15%;
-    padding-right: 15%;
+    width: 80%;
+    margin: auto;
   }
   &__text{
     font-size: 15px;
@@ -33,15 +33,19 @@
     }
   }
   &__button{
+    cursor: pointer;
+    border: none;
+    width: 30rem;
     padding: 7px;
     font-size: 20px;
     border-radius: 5px;
-    background-color: var(--color-yellow-1);
-    color: var(--color-dark-3);
-    font-weight: bold;
+    background-color: #FFCD05;
     line-height: 21px;
     font-family: Helvetica;
-
+    &__container{
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
 
