Slight text change in FAQ. Fixed vertical centering of "INGAT PULSA? INGAT BOXALADIN" (thanks Zanny)

--- a/src/style/sass/pages/_resetPassword.scss
+++ b/src/style/sass/pages/_resetPassword.scss
@@ -57,4 +57,35 @@
   &__logo{
     margin-left: 20px;
   }
+  &__wrapper{
+    &__about{
+      display: flex;
+      flex: 1;
+      flex-direction: row;
+      height: 50px;
+    }
+  }
+  &__textWarning{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+
+    h1{
+      margin-bottom: 0px;
+      line-height: 0px;
+      margin-top: 5.5px;
+    }
+  }
+  &__image{
+    display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+    image{
+      &.resetPassword__logo{
+        height: 40px;
+      }
+    }
+  }
 }
