Add extra footer to all pages. 1. Put LINE QR code in modal 2. Added modal to LINE in footer 3. Fixed FB and Insta links in footer

--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -11,6 +11,7 @@
       margin: 0rem;
       padding: 0rem;
       justify-content: flex-end;
+      margin-right: 50px;
     }
     .TextStyle{
       font-size: 25px;
@@ -26,7 +27,7 @@
 
 @media (max-width: 1024) {
   .HeaderTop__Right {
-    width: 70%
+    width: 70%;
   }
 }
 
