--- a/src/style/sass/components/_modal.scss
+++ b/src/style/sass/components/_modal.scss
@@ -8,6 +8,9 @@
       padding: 0;
       width: 60%;
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+      &__line{
+        width: 100%;
+      }
     }
     &__header{
       background-color: var(--color-white);
@@ -79,7 +82,7 @@
         font-size: 12px;
         display: flex;
         flex-direction: column;
-  
+
       }
     }
 
@@ -623,13 +626,13 @@
 }
 
 .ReactModalPortal .ReactModal__Overlay {
-transition: opacity 200ms ease-in-out;
-background: rgba(0, 0, 0, 0.15);
-&--after-open {
-  overflow: scroll;
-  opacity: 1;
-}
-&--before-close {
-    opacity: 0;
-}
+  transition: opacity 200ms ease-in-out;
+  background: rgba(0, 0, 0, 0.15);
+  &--after-open {
+    overflow: scroll;
+    opacity: 1;
+  }
+  &--before-close {
+      opacity: 0;
+  }
 }
