--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -42,7 +42,7 @@
       width: 5%;
       margin-right: 5%;
       &__verified{
-
+        width: 30px;
       }
       &__user{
         width: 80%;
@@ -236,7 +236,7 @@
       &__logo{
         width: 6%;
         &__verified{
-          width: 70%;
+          width: 15px;
           margin-left: 10%;
         }
         &__user{
@@ -301,7 +301,7 @@
       &__logo{
         width: 6%;
         &__verified{
-          width: 70%;
+          width: 30px;
           margin-left: 10%;
         }
         &__user{
