--- a/src/style/sass/pages/_emailVerification.scss
+++ b/src/style/sass/pages/_emailVerification.scss
@@ -1,13 +1,46 @@
 .emailVerification{
-    padding: 10%;
-    padding-left: 20%;
-    padding-right: 20%;
     background-color: white;
-  
+    width: 65%;
+    padding-top: 3%;
+    margin: auto;
+
+    &__content{
+      display: flex;
+      flex-direction: column;
+      padding-top: 3%;
+      &__textHead{
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+      }
+      &__textMiddle{
+        font-size: 27px;
+        display: flex;
+        justify-content: center;
+        padding-top: 4%;
+        text-align: center;
+      }
+      &__image{
+        display: flex;
+        justify-content: center;
+        padding-top: 3%;
+      }
+    }
+
+    &__header{
+      display: flex;
+      justify-content: center;
+      border-bottom: 5px #FCCD05 solid;
+      padding-bottom: 4%;
+      &__image{
+        width: 38%;
+        height: 73%;
+      }
+    }
+
     &__text{
       text-align: center;
       color: black;
       padding: 0%;
     }
   }
-  
