Adjusting logo and text of "ingat pulsa, ingat boxaladin" Changing mobile phone number input in Signup to number only

--- a/src/style/sass/pages/_resetPassword.scss
+++ b/src/style/sass/pages/_resetPassword.scss
@@ -56,6 +56,11 @@
   }
   &__logo{
     margin-left: 20px;
+    width: 50%;
+    &__faq{
+      margin-left: 20px;
+      width: 23%;
+    }
   }
   &__wrapper{
     &__about{
@@ -63,6 +68,7 @@
       flex: 1;
       flex-direction: row;
       height: 50px;
+      margin-top: 35px;
     }
   }
   &__textWarning{
@@ -76,6 +82,7 @@
       margin-bottom: 0px;
       line-height: 0px;
       margin-top: 5.5px;
+      font-size: 2.3rem;
     }
   }
   &__image{
