--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -19,7 +19,7 @@
   &__info{
     display: flex;
     justify-content: space-between;
-    margin: 1.75rem;
+    margin-bottom: 1.75rem;
     border-top: 5px solid #FFCD05;
     padding-top: 15px;
     &__button{
