change space evenly into space around for browser support

--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -61,7 +61,7 @@
   }
 }
 
-@media (min-width: 200px ) and (max-width:813px) {
+@media (min-width: 341px ) and (max-width:813px) {
   .footer__info{
     &__button{
       &__content{
@@ -71,6 +71,20 @@
     }
     &__logo{
       width: 40%;
+    }
+  }
+}
+
+@media (min-width: 200px ) and (max-width:340px) {
+  .footer__info{
+    &__button{
+      &__content{
+        width: 100%;
+        font-size: 14px;
+      }
+    }
+    &__logo{
+      width: 50%;
     }
   }
 }
