--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -40,7 +40,7 @@
   &__bottom{
     &__pulsa{
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-around;
       font-size: 50px;
       margin-bottom: 5%;
       margin-top: -4%;
