--- a/src/style/sass/pages/_phone.scss
+++ b/src/style/sass/pages/_phone.scss
@@ -34,7 +34,7 @@
     &__button{
         width: 100%;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         margin: 2.5%;
     }
 
