--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -136,7 +136,7 @@
   &__unverify{
     display: flex;
     width: 75%;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
     &__1{
       width: 33.3%;
