--- a/src/style/sass/pages/_dompet.scss
+++ b/src/style/sass/pages/_dompet.scss
@@ -10,7 +10,7 @@
     font-size: 24px;
     display: flex;
     width: 80%;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
   &__content{
     text-align: center;
