--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -57,6 +57,9 @@
       width: 20%;
       display: flex;
       justify-content: space-around;
+      &__content{
+        cursor: pointer;
+      }
     }
   }
 }
