transation in bidding button

--- a/src/style/sass/pages/_bidding.scss
+++ b/src/style/sass/pages/_bidding.scss
@@ -183,6 +183,11 @@
     	line-height: 35px;
       display: flex;
       justify-content: center;
+      &:hover{
+        cursor: pointer;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+
+      }
     }
   }
 
@@ -206,8 +211,10 @@
       font-family: Helvetica;
       font-size: 30px;
       font-weight: bold;
-
-
+      &:hover{
+        cursor: pointer;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+      }
     }
   }
 
