--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -31,6 +31,8 @@
 
     }
     &__link{
+      display: flex;
+      align-items: center;
       font-family: Helvetica;
       font-size: 22px;
       font-weight: 600;
