--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -6,6 +6,11 @@
   margin: 2rem;
 }
 
+.dropdown-item.active{
+  color: black !important;
+  background-color: lightgrey !important;
+}
+
 .DropdownUser{
   &__item{
     background-color: lightgrey;
@@ -31,6 +36,8 @@
 
     }
     &__link{
+      display: flex;
+      align-items: center;
       font-family: Helvetica;
       font-size: 22px;
       font-weight: 600;
@@ -38,7 +45,7 @@
       &:hover{
         color: black ;
         // text-decoration: none;
-      }      
+      }
     }
   }
 }
