add alfamart in modal choose bank

--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -50,3 +50,8 @@ ul {
 .col-sm-6{
   padding-right: 0;
 }
+
+//remove arrow in input type number
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
