--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -240,6 +240,15 @@
 			font-weight: 500;
 			line-height: 16px;
 		}
+		&__button{
+			margin: auto;
+			margin-bottom: 3%;
+			font-size: 20px;
+			border-radius: 6px;
+			background-color: var(--color-yellow-1);
+			border: 2px solid;
+			width: 50%;
+		}
 	}
 	&__icon{
 		width: 250px;
