--- a/src/style/sass/pages/_pembayaran.scss
+++ b/src/style/sass/pages/_pembayaran.scss
@@ -95,3 +95,12 @@
   display: flex;
   justify-content: center;
 }
+
+.paymentGuide{
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  padding-top: 2%;
+  padding-left: 3%;
+  padding-bottom: 2%;
+}
