--- a/src/style/sass/pages/_pembayaran.scss
+++ b/src/style/sass/pages/_pembayaran.scss
@@ -50,7 +50,7 @@
     &__header{
       padding-top: 3%;
       padding-bottom: 3%;
-      background-color: lightgreen;
+      background-color: var(--color-yellow-1);
       padding-left: 2%;
       font-size: 21px;
     }
