--- a/src/style/sass/pages/_bidding.scss
+++ b/src/style/sass/pages/_bidding.scss
@@ -263,3 +263,11 @@ biddingImage{
   width: 100%;
   height:50%;
 }
+
+.bidding__notif{
+  color: black;
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
