--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -46,6 +46,7 @@
 	}
 
 	&__slotItems{
+		width: 290px;
 		border-radius: 10px;
 		border: 11px solid rgb(186, 171, 171);
 		margin-bottom: 10px;
@@ -195,7 +196,7 @@
 
 
 .boxaladin {
-	background-image: url('../../asset/Logo/LogoSmall.svg');
+	background-image: url('https://s3-ap-southeast-1.amazonaws.com/boxaladin-assets-v2/icon/Logo/LogoSmall.svg');
 	width: 80%;
 	height: 100px;
 	border-radius: 10px;
