--- a/src/style/sass/pages/_dompet.scss
+++ b/src/style/sass/pages/_dompet.scss
@@ -16,6 +16,8 @@
     text-align: center;
     border: 1px solid;
     width: 40%;
+    height: 86%;
+    margin-top: 2%;
     &__title{
       font-size: 28px;
       margin: 5%;
@@ -31,6 +33,9 @@
     }
     &__key{
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       &__label{
 
       }
