--- a/src/style/sass/mobile/_header.scss
+++ b/src/style/sass/mobile/_header.scss
@@ -29,9 +29,14 @@
 }
 
 .mobile__home{
+  &__image{
+    width: 100%;
+    margin-bottom: 5%;
+  }
   &__label{
     display: flex;
     justify-content: center;
+    margin: 5%;
   }
   &__content1{
     display: flex;
@@ -48,9 +53,21 @@
     border-radius: 10px;
     margin: 2px;
     background-color: white;
+    &__container{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     &__image{
       display: flex;
       width: 100%
     }
+  }
+}
+
+@media (min-width:450px) {
+  .mobile__home__button{
+      width: 100px;
+      height: 100px;
   }
 }
