fix header mobile

--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -1,4 +1,29 @@
 //Header
+.header-margin{
+  margin: 0%;
+  border: 2px solid #FFCD05;
+  border-radius: 16px;
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+  width: 38%;
+}
+
+.headMobile{
+  &__text{
+    font-size: 100%;
+  }
+}
+
+.HeaderTop__Right{
+  &.navbar-nav{
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    width: 80%;
+  }
+}
+
 .HeaderTop {
     background-color: white;
     border-bottom: 4px solid #FFCD06;
