--- a/src/style/sass/mobile/_header.scss
+++ b/src/style/sass/mobile/_header.scss
@@ -1,4 +1,19 @@
 @media (max-width: 767px)  {
+
+  .ButtonHeader__big {
+    background-color: transparent !important;
+    background: transparent;
+    margin-left: 15px;
+    border: 2px solid;
+    border-radius: 12px;
+    padding-right: 0%;
+    color: #FFCD05
+  }
+
+  .ButtonHeader__textMobile {
+    color: black
+  }
+
   .HeaderTop__Right {
     &.navbar-nav{
       display: flex;
@@ -11,8 +26,14 @@
   .ButtonHeader {
     &.btn {
       &.btn-secondary {
-        width: 100%
+
       }
+    }
+  }
+
+  .headMobile{
+    &__text{
+      font-size: 100%;
     }
   }
 
@@ -21,6 +42,8 @@
     border: 2px solid #FFCD05;
     border-radius: 16px;
     width: 40%;
+    display: flex;
+    justify-content: center;
   }
 
   .HeaderTopM__logo{
