--- a/src/style/sass/mobile/_dompet.scss
+++ b/src/style/sass/mobile/_dompet.scss
@@ -41,18 +41,23 @@
     }
 
     &__headContent {
+      display: flex;
+      justify-content: space-between;
+
       &__text {
         padding-left: 2%;
         padding-top: 2%;
         font-size: 121%;
         font-weight: bold;
-        margin-bottom: 0;
+        margin-top: 1.3%;
+        width: 100%;
       }
 
       &__plus {
         font-weight: bold;
         font-size: 200%;
         margin-bottom: 0;
+        padding-right: 1%;
       }
     }
   }
