--- a/src/style/sass/mobile/_dompet.scss
+++ b/src/style/sass/mobile/_dompet.scss
@@ -53,7 +53,34 @@
         font-weight: bold;
         font-size: 200%;
         margin-bottom: 0;
+        color: black;
+        text-decoration: none;
+        &:hover{
+          color: black;
+          text-decoration: none;
+        }
       }
+    }
+  }
+}
+
+.mobile__menu{
+  &__button{
+    height: 45px;
+    border-radius: 10px;
+    font-size: 15px;
+    margin: 5%;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+      color: black;
+      text-decoration: none;
+    }
+    &__container{
+      display: flex;
+      justify-content: center;
     }
   }
 }
