--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -46,8 +46,8 @@
 	}
 
 	&__slotItems{
-		width: 60%;
-		margin: 10px auto;
+    width: 300px;
+    margin: 10px auto;
 		border-radius: 10px;
 		border: 11px solid rgb(186, 171, 171);
 		margin-bottom: 10px;
