--- a/src/style/sass/mobile/_dompet.scss
+++ b/src/style/sass/mobile/_dompet.scss
@@ -1,27 +1,25 @@
 @media (max-width: 767px) {
   .dompetHome {
     &__bodyContent {
+      border: 2px solid grey;
+      border-top: none;
       border-bottom-right-radius: 10px;
       border-bottom-left-radius: 10px;
       display: flex;
-      justify-content: space-around;
-      padding-top: 2%;
-      border-right-color: grey;
-      border-right-style: solid;
-      border-right-width: 2px;
-      border-bottom-color: grey;
-      border-bottom-style: solid;
-      border-bottom-width: 2px;
-      border-left-color: grey;
-      border-left-style: solid;
-      border-left-width: 2px;
-      border-image-source: initial;
-      border-image-slice: initial;
-      border-image-width: initial;
-      border-image-outset: initial;
-      border-image-repeat: initial;
-      padding-top: 6%;
-      padding-bottom: 2%;
+      padding: 3%;
+      padding-bottom: 0;
+      font-size: 13px;
+      &__container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 33.33%;
+      }
+      &__logo{
+        width: 25%;
+        margin-bottom: 7%;
+        margin-right: 3%;
+      }
     }
 
     &__container {
@@ -43,23 +41,22 @@
     &__headContent {
       display: flex;
       justify-content: space-between;
-
+      &__logo{
+        width: 8%;
+        margin-left: 5%;
+      }
       &__text {
-        padding-left: 2%;
-        padding-top: 2%;
-        font-size: 121%;
+        margin-left: 5%;
+        margin-bottom: 0;
         font-weight: bold;
-        margin-top: 1.3%;
-        width: 100%;
       }
 
       &__plus {
         font-weight: bold;
-        font-size: 200%;
-        margin-bottom: 0;
+        font-size: 15px;
         color: black;
         text-decoration: none;
-        padding-right: 1%;
+        margin-right: 5%;
         &:hover{
           color: black;
           text-decoration: none;
