finish new flow for pulsa

--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -93,21 +93,21 @@
 }
 
 
-.btn {
-  border: 1px solid black;
-  background-color: yellowgreen;
+// .btn {
+//   border: 1px solid black;
+//   background-color: yellowgreen;
 
-  &-small {
-    height: 24px;
-  }
-  &-medium {
-    height: 32px;
-  }
-  &-large {
-    height: 40px;
-  }
+//   &-small {
+//     height: 24px;
+//   }
+//   &-medium {
+//     height: 32px;
+//   }
+//   &-large {
+//     height: 40px;
+//   }
 
-  &-block {
-    width: 100%;
-  }
-}
+//   &-block {
+//     width: 100%;
+//   }
+// }
